--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -14,14 +14,14 @@
     justify-content: center;
   }
   .left {
-    flex: 1;
+    flex: 2;
     display: flex;
     flex-direction: column;
     gap: 10px;
     align-items: center;
 
     .logo {
-      font-size: 1.5rem;
+      font-size: 1.2rem;
       font-weight: bold;
       margin-bottom: 10px;
     }
@@ -30,6 +30,7 @@
       display: flex;
       gap: 10px;
       font-size: 1.5rem;
+      cursor: pointer;
 
       .social__icon__FB {
         color: #3b5998;
@@ -59,39 +60,60 @@
   }
 
   .middle {
-    flex: 1;
+    flex: 2;
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
-
+    .middle_Title {
+      font-size: 1.2rem;
+      font-weight: bold;
+      margin-bottom: 10px;
+      align-self: center;
+    }
     .footer-links {
-
       list-style: none;
       padding: 0;
       margin-bottom: 10px;
-      font-size: 1rem;
+      font-size: 16px;
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: center;
       gap: 5px;
+      font-size: 1rem;
 
       .footer__link {
         margin-bottom: 10px;
-
         text-decoration: none;
         color: #333;
+        align-self: center;
         font-size: 1rem;
         transition: color 0.3s;
+        position: relative;
+
+        &::before {
+          content: "";
+          position: absolute;
+          bottom: -5px;
+          left: 0;
+          width: 0;
+          height: 2px;
+          background-color: #f26a2e;
+          transition: width 0.3s ease-in-out;
+        }
 
         &:hover {
-          color: #000000;
+          color: #f26a2e;
+
+          &::before {
+            width: 100%;
+          }
         }
       }
     }
   }
 
   .right {
-    flex: 1;
+    flex: 2;
 
     display: flex;
     flex-direction: column;
@@ -105,24 +127,30 @@
       display: flex;
       flex-direction: column;
       gap: 10px;
-
+      .newsLetter_Title {
+        font-size: 1.2rem;
+        font-weight: bold;
+        margin-bottom: 10px;
+        align-self: center;
+      }
       .newLetter__input {
         padding: 10px 15px;
-        border: 1px solid #4caf50;
+        border: 1px solid #f26a2e;
         border-radius: 5px;
         outline: none;
         font-size: 1rem;
         transition: border-color 0.3s, box-shadow 0.3s;
+        animation: shine 1s infinite;
 
         &:focus {
-          border-color: #1e8449;
-          box-shadow: 0 0 5px rgba(30, 132, 73, 0.5);
+          border-color: #f75a17;
+          box-shadow: 0 0 5px #f26a2e;
         }
       }
 
       .newLetter__btn {
         padding: 10px;
-        background-color: #4caf50;
+        background-color: #f26a2e;
         color: #fff;
         border: none;
         border-radius: 5px;
@@ -132,7 +160,26 @@
         font-size: 1rem;
 
         &:hover {
-          background-color: #45a049;
+          background-color: #f7520b;
+          transform: scale(1.05);
+          transition: background-color 0.3s, transform 0.3s;
+
+          &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0.5;
+            background: linear-gradient(
+              to right,
+              transparent 30%,
+              #fff 50%,
+              transparent 70%
+            );
+            animation: shine 1s infinite;
+          }
         }
       }
     }
@@ -147,5 +194,10 @@
       margin: 0;
       font-size: 0.9rem;
     }
+  }
+}
+@keyframes shine {
+  to {
+    background-position: 200% 0;
   }
 }
