--- a/src/components/MobileMenu/MobileMenu.scss
+++ b/src/components/MobileMenu/MobileMenu.scss
@@ -4,8 +4,8 @@
   align-items: center;
   padding: 0 10px;
   height: 60px;
-  background-color: #ffffff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  // background-color: #ffffff;
+  // box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
   .menu-icon {
     font-size: 1.5rem;
     cursor: pointer;
@@ -27,7 +27,6 @@
 
       &:hover {
         color: #f26a2e;
-        background-color: #d6d6d686;
       }
     }
 
@@ -40,8 +39,9 @@
       background-color: #ffffff;
       width: 100%;
       padding: 10px 20px;
-      box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-        rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+      backdrop-filter: blur(16px) saturate(180%);
+      -webkit-backdrop-filter: blur(16px) saturate(180%);
+      background-color: rgba(228, 228, 228, 0.493);
 
       .Home__mobile__icon {
         color: #f26a2e;
