--- a/src/components/Navbar/AdminLinksStyles.scss
+++ b/src/components/Navbar/AdminLinksStyles.scss
@@ -2,11 +2,20 @@
   position: absolute;
   top: 60px;
   right: 10px;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(228, 228, 228, 0.493);
   border-radius: 5px;
-  padding: 10px;
+  padding: 2px 10px;
   z-index: 1;
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: opacity 0.3s, transform 0.3s;
+
+  &:hover {
+    opacity: 1;
+    transform: translateY(0);
+  }
 
   .adminMenuLinks {
     list-style: none;
@@ -17,7 +26,7 @@
       align-items: center;
       color: #333;
       text-decoration: none;
-      padding: 8px 10px;
+      padding: 6px 10px;
       transition: background-color 0.3s;
 
       .settingsIcon,
@@ -27,6 +36,7 @@
         height: 25px;
         width: 25px;
         margin-right: 8px;
+        transition: transform 0.3s;
       }
 
       .settingsIcon {
@@ -45,6 +55,13 @@
 
       &:hover {
         background-color: #f0f0f0;
+
+        .settingsIcon,
+        .savedIcon,
+        .logoutIcon,
+        .addRecipeIcon {
+          transform: scale(1.2);
+        }
       }
     }
   }
