--- a/src/components/Navbar/AdminLinksStyles.scss
+++ b/src/components/Navbar/AdminLinksStyles.scss
@@ -8,14 +8,6 @@
   border-radius: 5px;
   padding: 2px 10px;
   z-index: 1;
-  opacity: 0;
-  transform: translateY(-10px);
-  transition: opacity 0.3s, transform 0.3s;
-
-  &:hover {
-    opacity: 1;
-    transform: translateY(0);
-  }
 
   .adminMenuLinks {
     list-style: none;
@@ -29,6 +21,14 @@
       padding: 6px 10px;
       transition: background-color 0.3s;
 
+      &:hover {
+        .settingsIcon,
+        .savedIcon,
+        .logoutIcon,
+        .addRecipeIcon {
+          transform: scale(1.2);
+        }
+      }
       .settingsIcon,
       .savedIcon,
       .logoutIcon,
@@ -36,7 +36,8 @@
         height: 25px;
         width: 25px;
         margin-right: 8px;
-        transition: transform 0.3s;
+
+        transition: all 0.3s ease-in-out;
       }
 
       .settingsIcon {
@@ -51,17 +52,6 @@
       }
       .addRecipeIcon {
         color: #f7a816;
-      }
-
-      &:hover {
-        background-color: #f0f0f0;
-
-        .settingsIcon,
-        .savedIcon,
-        .logoutIcon,
-        .addRecipeIcon {
-          transform: scale(1.2);
-        }
       }
     }
   }
