--- a/src/components/MobileMenu/MobileMenu.scss
+++ b/src/components/MobileMenu/MobileMenu.scss
@@ -42,8 +42,8 @@
       background-color: #ffffff;
       width: 100%;
       padding: 10px 20px;
-      backdrop-filter: blur(16px) saturate(180%);
-      -webkit-backdrop-filter: blur(16px) saturate(180%);
+      backdrop-filter: blur(4px) saturate(77%);
+      -webkit-backdrop-filter: blur(4px) saturate(77%);
       background-color: rgba(228, 228, 228, 0.185);
 
       .Home__mobile__icon,
@@ -90,6 +90,30 @@
 
       &:hover {
         transform: scale(1.1);
+      }
+    }
+  }
+  .authButtons {
+    display: flex;
+    justify-content: space-between;
+
+    .authButton_mobile {
+      display: flex;
+      align-self: center;
+      justify-content: center;
+      gap: 10px;
+      padding: 8px 12px;
+      margin-right: 10px;
+      text-decoration: none;
+      color: #fff;
+      background-color: #f26a2e;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease-in-out;
+
+      &:hover {
+        background-color: #d9534f;
       }
     }
   }
