--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -8,17 +8,29 @@
   position: relative;
   z-index: 100;
   transition: background-color 0.3s ease-in-out;
-
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
   &.scrolled {
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    background: rgba(255, 255, 255, 0.05);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5.1px);
+    -webkit-backdrop-filter: blur(5.1px);
   }
-
+  @media screen and (max-width: 1024px) {
+    padding: 0 10px;
+  }
   .leftNavBar {
     display: flex;
     justify-content: center;
     align-items: center;
     flex: 2;
+
+    @media screen and (max-width: 1024px) {
+      flex: 1;
+    }
 
     .logo {
       height: 40px;
@@ -31,12 +43,18 @@
     justify-content: center;
     align-items: center;
     flex: 6;
-
+    @media screen and (max-width: 1024px) {
+      flex: 4;
+    }
     .navLists {
       display: flex;
       align-items: center;
+      gap: 15px;
       margin-left: 50px;
       list-style: none;
+      @media screen and (max-width: 1024px) {
+        margin-left: 0;
+      }
 
       .navLink {
         margin: 0 10px;
@@ -75,12 +93,15 @@
     align-self: center;
     gap: 30px;
     flex: 2;
-
+    @media screen and (max-width: 1024px) {
+      flex: 1;
+    }
     .searchContainer {
       display: flex;
       align-items: center;
       position: relative;
       margin-right: 10px;
+      background: transparent;
 
       &:hover {
         .searchInput {
@@ -101,6 +122,7 @@
         border: none;
         outline: none;
         width: 0;
+        background: transparent;
         padding: 0;
         margin-left: -5px;
         transition: width 0.3s ease-in-out, padding 0.3s ease-in-out;
@@ -114,7 +136,7 @@
           padding: 8px;
           backdrop-filter: blur(16px) saturate(180%);
           -webkit-backdrop-filter: blur(16px) saturate(180%);
-          background-color: rgba(225, 227, 231, 0.75);
+          background-color: rgba(235, 235, 235, 0.945);
           border-radius: 12px;
           border: 1px solid rgba(255, 255, 255, 0.125);
           z-index: 1;
@@ -141,7 +163,10 @@
         border-radius: 5px;
         cursor: pointer;
         transition: background-color 0.3s ease-in-out;
-
+        @media screen and (max-width: 1024px) {
+          font-size: 12px;
+          gap: 5px;
+        }
         &:hover {
           background-color: #d9534f;
         }
