--- a/src/components/PopularRecipes/PopularRecipes.scss
+++ b/src/components/PopularRecipes/PopularRecipes.scss
@@ -16,8 +16,8 @@
 
     .recipe-card {
       position: relative;
-      width: 300px;
-      height: 300px;
+      width: 280px;
+      height: 280px;
       margin: 10px 20px;
       border-radius: 16px;
       overflow: hidden;
@@ -26,7 +26,6 @@
 
       @media screen and (max-width: 480px) {
         margin: 10px 0;
-        
       }
       .background-layer {
         content: "";
@@ -57,7 +56,7 @@
         transform: translate(-50%, -50%);
         text-align: center;
         padding: 20px;
-        color: #fff; // Adjust the text color
+        color: #f39c12; // Adjust the text color
         opacity: 0;
         transition: opacity 0.3s ease;
       }
