--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -1,18 +1,19 @@
-// HeroSection.scss
-.hero-section {
-  padding-top: 20px;
-  display: flex;
-  height: 100vh;
-  background-image: url("../assets/HeroBG.jpg");
-  :-moz-loading {
+.home{
+  
+  .hero-section {
+    padding-top: 20px;
+    display: flex;
+    height: 100vh;
     background-image: url("../assets/HeroBG.jpg");
-  }
-  background-repeat: no-repeat;
-
+    :-moz-loading {
+      background-image: url("../assets/HeroBG.jpg");
+    }
+    background-repeat: no-repeat;
+    
   background-size: cover;
   background-position: center;
   background-color: #000;
-
+  
   @media screen and (max-width: 1024px) {
     height: 100%;
     min-height: 100vh;
@@ -45,7 +46,7 @@
   font-size: 3rem;
   font-weight: bold;
   margin-bottom: 20px;
-
+  
   @media screen and (max-width: 480px) {
     font-size: 2rem;
   }
@@ -63,7 +64,7 @@
   display: flex;
   max-width: 450px;
   margin: 0 auto;
-
+  
   @media screen and (max-width: 480px) {
     flex-direction: column;
     gap: 10px;
@@ -78,7 +79,7 @@
   border-radius: 5px 0 0 5px;
   font-size: 1rem;
   outline: none;
-
+  
   &::placeholder {
     color: #ccc;
   }
@@ -122,7 +123,7 @@
   transition: background-color 0.3s ease;
   border: none;
   outline: none;
-
+  
   &:hover {
     background-color: #c03514;
   }
@@ -138,4 +139,6 @@
   justify-content: flex-end;
   flex-wrap: wrap;
   flex: 1; /* Add flex: 1 to allow flex-end positioning */
+}
+
 }
