Start Data fetching from Third party API

--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -4,9 +4,9 @@
     padding-top: 20px;
     display: flex;
     height: 100vh;
-    background-image: url("../assets/HeroBG.jpg");
+    background-image: url("https://img.freepik.com/free-photo/top-view-italian-pasta-with-greens-tomato-sauce-meat-inside-pan-dark-grey-space_140725-76299.jpg?w=1380&t=st=1703563963~exp=1703564563~hmac=46b741b2e6458ef447410bb955181f5791782815a15cdcc4220303669186428b");
     :-moz-loading {
-      background-image: url("../assets/HeroBG.jpg");
+      background-image: url("https://img.freepik.com/free-photo/top-view-italian-pasta-with-greens-tomato-sauce-meat-inside-pan-dark-grey-space_140725-76299.jpg?w=1380&t=st=1703563963~exp=1703564563~hmac=46b741b2e6458ef447410bb955181f5791782815a15cdcc4220303669186428b");
     }
     background-repeat: no-repeat;
     
