--- a/src/components/MobileMenu/MobileMenu.scss
+++ b/src/components/MobileMenu/MobileMenu.scss
@@ -15,7 +15,7 @@
 
     .menu-link {
       text-decoration: none;
-      color: #000000;
+      color: #00bf63;
       margin-bottom: 0.5rem;
       font-size: 16px;
       padding: 5px 30px;
@@ -25,7 +25,7 @@
       transition: color 0.3s ease-in-out;
 
       &:hover {
-        color: #f26a2e;
+        color: #7ed957;
 
         .menu-icon {
           transform: scale(1.2);
@@ -56,7 +56,7 @@
       }
 
       .Home__mobile__icon:hover {
-        color: #f26a2e;
+        color: #7ed957;
       }
 
       .Recipe__mobile__icon:hover {
@@ -64,19 +64,26 @@
       }
 
       .Add__recipe__mobile__icon:hover {
-        color: #ee8915;
+        color: #7ed957;
       }
 
       .NewRecipe__mobile__icon:hover {
-        color: #ff4d17;
+        color: #7ed957;
       }
     }
   }
 
   .logo {
     .logo__img {
-      height: 25px;
+      height: 85px;
       object-fit: cover;
+      align-self: center;
+      cursor: pointer;
+      transition: transform 0.3s ease-in-out;
+
+      &:hover {
+        transform: rotateY("180deg");
+      }
     }
   }
 
@@ -101,19 +108,17 @@
       display: flex;
       align-self: center;
       justify-content: center;
-      gap: 10px;
-      padding: 8px 12px;
-      margin-right: 10px;
       text-decoration: none;
-      color: #fff;
-      background-color: #f26a2e;
+      color: #00bf63;
       border: none;
-      border-radius: 5px;
       cursor: pointer;
       transition: background-color 0.3s ease-in-out;
 
       &:hover {
-        background-color: #d9534f;
+        color: #7ed957;
+        font-weight: bold;
+        text-decoration: underline;
+        text-shadow: 0 0 5px #7ed957;
       }
     }
   }
