--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -14,7 +14,7 @@
   right: 0;
   left: 0;
   &.scrolled {
-    background: rgba(255, 255, 255, 0.05);
+    background: #00bf631e;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5.1px);
     -webkit-backdrop-filter: blur(5.1px);
@@ -33,8 +33,12 @@
     }
 
     .logo {
-      height: 40px;
+      height: 90px;
       object-fit: cover;
+      cursor: pointer;
+      @media screen and (max-width: 1024px) {
+        height: 70px;
+      }
     }
   }
 
@@ -51,6 +55,7 @@
       align-items: center;
       gap: 15px;
       margin-left: 50px;
+      font-weight: bold;
       list-style: none;
       @media screen and (max-width: 1024px) {
         margin-left: 0;
@@ -60,8 +65,9 @@
         margin: 0 10px;
         text-decoration: none;
         cursor: pointer;
+        font-weight: bold;
         transition: all 0.3s ease-in-out;
-        color: #333;
+        color: #ffffff;
         font-size: 16px;
         font-weight: 500;
         position: relative;
@@ -72,12 +78,12 @@
           left: 0;
           width: 0;
           height: 2px;
-          background-color: #f26a2e;
+          background-color: #7ed957;
           transition: width 0.3s ease-in-out;
         }
 
         &:hover {
-          color: #f26a2e;
+          color: #00bf63;
 
           &::before {
             width: 100%;
@@ -111,7 +117,7 @@
       }
 
       .searchIcon {
-        color: #f26a2e;
+        color: #7ed957;
         font-size: 20px;
         position: absolute;
         left: 10px;
@@ -140,7 +146,7 @@
           border-radius: 12px;
           border: 1px solid rgba(255, 255, 255, 0.125);
           z-index: 1;
-          border: 1px #f26a2e;
+          border: 1px solid #7ed957;
         }
       }
     }
@@ -158,7 +164,7 @@
         margin-right: 10px;
         text-decoration: none;
         color: #fff;
-        background-color: #f26a2e;
+        background-color: #00bf63;
         border: none;
         border-radius: 5px;
         cursor: pointer;
@@ -168,7 +174,7 @@
           gap: 5px;
         }
         &:hover {
-          background-color: #d9534f;
+          background-color: #7ed957;
         }
       }
     }
@@ -181,11 +187,11 @@
           object-fit: cover;
           border-radius: 50%;
           cursor: pointer;
-          border: 2px solid #f26a2e;
+          border: 2px solid #00bf63;
           transition: border 0.3s ease-in-out;
-
+          animation: infinite 1s linear alternate pulse;
           &:hover {
-            border: 2px solid #d9534f;
+            border: 2px solid #7ed957;
           }
         }
       }
